Fixed background not covering whole HTML page

--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,12 @@ html {
 	width: 100%;
 	height: 100%;
 	min-height: 365px;
+
+	background: var(--bg-color);
+	background-image: url("../img/background.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
 }
 
 body {
@@ -81,14 +87,6 @@ header nav ul li a {
 
 	width: 100%;
 	height: 100%;
-
-	backdrop-filter: blur(8px);
-
-	background: var(--bg-color);
-	background-image: url("../img/background.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
 }
 
 
